# iotghost

./: .gitignore  LICENSE.md  README.md  pyproject.toml
iotghost/: __init__.py  agent.py  cli.py  emulator.py  network.py  nvram.py  pipeline.py  prompts.py  tui.py
iotghost/extractors/: __init__.py  firmware.py
iotghost/tools/: __init__.py  shell.py
