[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iotghost"
version = "0.1.0"
description = "AI-powered IoT firmware emulator -- autonomous QEMU full-system emulation driven by LLM shell agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "iotwizz"},
]
keywords = ["iot", "firmware", "emulation", "qemu", "security", "pentest", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Emulators",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
iotghost = "iotghost.cli:main"

[project.urls]
Homepage = "https://github.com/iotwizz/iotghost"
Repository = "https://github.com/iotwizz/iotghost"
Issues = "https://github.com/iotwizz/iotghost/issues"

[tool.hatch.build.targets.wheel]
packages = ["iotghost"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
